adiciona título no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>
-            
+            DCC202 - Atividade 3: LARISSA REZENDE FAZZA
         </title>
     </head>
     <body>
