adiciona título e parágrafo sobre a página na main

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <main>
-            
+            <h1>Larissa Rezende Fazza - 202335021 - DCC202 - atividade 3</h1>
+            <p> Esta é a atividade 3 da disciplina Desenvolvimento Web (DCC202), no período 2023.3.
         </main>
 
     </body>
