adiciona seção "naturalidade" na tag main

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <main>
             <h1>Larissa Rezende Fazza - 202335021 - DCC202 - atividade 3</h1>
             <p> Esta é a atividade 3 da disciplina Desenvolvimento Web (DCC202), no período 2023.3.
+            
+            <section>
+                <h1>Naturalidade</h1>
+                <p> eu, Larissa, nasci em Juiz de Fora, uma cidade localizada no Estado de Minas Gerais, no Brasil.
+            </section>
         </main>
 
     </body>
