--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                 <h1>Naturalidade</h1>
                 <p> eu, Larissa, nasci em Juiz de Fora, uma cidade localizada no Estado de Minas Gerais, no Brasil.
             </section>
+            Crie um segunda seção com um título "O que eu gosto de fazer?"  e um parágrafo descrevendo suas atividades preferidas.
+
+
+            <section>
+                <h1>O que gosto de fazer</h1>
+                <p> Particularmente, em relação a meu trabalho, gosto de programar em PHP, mais especificamente, com o framework Laravel.<br>
+                Em relação à minha vida pessoal, dentre meus principais hobbies, posso citar música, séries e livros.
+            </section>
         </main>
 
     </body>
